# video_streaming_service

./: .env.example  .gitignore  Readme.md  docker-compose.yml  init.sql  pom.xml
ServiceDiscovery/: pom.xml
aggregator-service/: pom.xml
ai_service/: Dockerfile  pom.xml  requirements.txt
api_gateway/: pom.xml
asset_onboarding/: Dockerfile  pom.xml
channel_service/: pom.xml
channel_service_marked_for_removal/: pom.xml
common-lib/: pom.xml
event_service/: Dockerfile  pom.xml
live_stream_transcoding_container/: Dockerfile  docker  pom.xml
live_stream_worker/: Dockerfile  pom.xml
moderation_service/: pom.xml
moderation_worker/: Dockerfile  docker-compose.yml  requirements.txt
moderation_worker_container/: Dockerfile
notification/: Dockerfile  pom.xml
rtmp_server/: Dockerfile  docker.js  index.js  package-lock.json  package.json
sdk-js-server/: package-lock.json  package.json  tsconfig.json
service_discovery/: build.gradle
testing/: config.js  engine.js  error.js  index.js  package-lock.json  package.json
transcoder/: pom.xml
transcoding_container/: Dockerfile  docker  pom.xml
transcriber_worker/: Dockerfile  pyproject.toml
transcriber_worker/src/: config.py  main.py
transcriber_worker/src/models/: job.py  transcript.py
transcriber_worker/src/producer/: producer.py
transcriber_worker/src/storage/: s3_service.py
transcriber_worker/src/transcription/: whisper_service.py
transcriber_worker/src/utils/: transcript_generator.py
transcript_generator_worker/: Dockerfile  requirements.txt  worker.py
user/: Dockerfile  pom.xml
(+808 files in other folders)
