[project]
name = "transcriber-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.18",
    "faster-whisper>=1.2.1",
    "kafka-python>=2.3.1",
    "pika>=1.4.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
]
